--- a/.github/workflows/release_to_ansible_galaxy.yml
+++ b/.github/workflows/release_to_ansible_galaxy.yml
@@ -1,36 +1,32 @@
-
+---
 # see: https://github.com/geerlingguy/ansible-role-docker/blob/8bb277bd7fb7019eb129b4a07194f0364c060203/.github/workflows/release.yml
 name: Release Role to Ansible Galaxy
-'on':
+on:
   push:
-    tags:
-      - '*'
   workflow_dispatch:
   workflow_call:
-
 defaults:
   run:
-    working-directory: 'jakobLichterfeld/ansible-role-amok_exifsorter'
-
+    working-directory: "${{ github.event.repository.name }}"
 jobs:
   release:
-    name:  Release Role to Ansible Galaxy
+    name:  Release role to Ansible Galaxy
     runs-on: ubuntu-latest
+    # prevent stuck jobs
+    timeout-minutes: 20
     steps:
-      - name: Check out the codebase.
+      - name: Checkout code
         uses: actions/checkout@v3
         with:
-          path: 'jakobLichterfeld/ansible-role-amok_exifsorter'
+          path: "${{ github.event.repository.name }}"
 
-      - name: Set up Python 3.
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+      - name: Set up Python
+        uses: ./.github/actions/set-up-python
 
-      - name: Install Ansible.
-        run: pip3 install ansible-core
+      - name: Set up Ansible
+        uses: ./.github/actions/set-up-ansible
 
-      - name: Trigger a new import on Galaxy.
+      - name: Publish role with import to Galaxy
         run: >-
           ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }}
           $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2)
