--- a/.github/workflows/release_to_ansible_galaxy.yml
+++ b/.github/workflows/release_to_ansible_galaxy.yml
@@ -7,7 +7,7 @@ on:
   workflow_call:
 defaults:
   run:
-    working-directory: "${{ github.event.repository.name }}"
+    working-directory: "${{ GITHUB_REPOSITORY }}"
 jobs:
   release:
     name:  Release role to Ansible Galaxy
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          path: "${{ github.event.repository.name }}"
+          path: "${{ GITHUB_REPOSITORY }}"
 
       - name: Set up Python
         uses: ./.github/actions/set-up-python
