--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: ./.github/actions/set-up-python
+        uses: .github/actions/set-up-python
 
       - name: Lint
-        uses: ./.github/actions/lint
+        uses: .github/actions/lint
 
   molecule:
     name: Test with Ansible Molecule
@@ -40,13 +40,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: ./.github/actions/set-up-python
+        uses: .github/actions/set-up-python
 
       - name: Set up Ansible
-        uses: ./.github/actions/set-up-ansible
+        uses: .github/actions/set-up-ansible
 
       - name: Set up Molecule
-        uses: ./.github/actions/set-up-molecule
+        uses: .github/actions/set-up-molecule
 
       - name: Run Molecule tests
         run: molecule test
