ci: DevOps Pipeline
- correct path

--- a/.github/workflows/release_to_ansible_galaxy.yml
+++ b/.github/workflows/release_to_ansible_galaxy.yml
@@ -6,6 +6,10 @@ on:
   workflow_dispatch:
   workflow_call:
 
+defaults:
+  run:
+    working-directory: "${{ github.repository }}"
+
 jobs:
   release:
     name:  Release role to Ansible Galaxy
