--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ on:
   workflow_dispatch:
   workflow_call:
 
+defaults:
+  run:
+    working-directory: "${{ github.repository }}"
+
 jobs:
   lint:
     name: Lint
@@ -22,10 +26,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: ./.github/actions/set-up-python
+        uses: ./.github/actions/set-up-python/
 
       - name: Lint
-        uses: ./.github/actions/lint
+        uses: ./.github/actions/lint/
 
   molecule:
     name: Test with Ansible Molecule
@@ -40,13 +44,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: ./.github/actions/set-up-python
+        uses: ./.github/actions/set-up-python/
 
       - name: Set up Ansible
-        uses: ./.github/actions/set-up-ansible
+        uses: ./.github/actions/set-up-ansible/
 
       - name: Set up Molecule
-        uses: ./.github/actions/set-up-molecule
+        uses: ./.github/actions/set-up-molecule/
 
       - name: Run Molecule tests
         run: molecule test
