--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 
 defaults:
   run:
-    working-directory: "${{ github.repository }}"
+    working-directory: "${{ GITHUB_REPOSITORY }}"
 
 jobs:
   lint:
@@ -26,10 +26,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: ./.github/actions/set-up-python/
+        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/set-up-python/
 
       - name: Lint
-        uses: ./.github/actions/lint/
+        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/lint/
 
   molecule:
     name: Test with Ansible Molecule
@@ -44,13 +44,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: ./.github/actions/set-up-python/
+        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/set-up-python/
 
       - name: Set up Ansible
-        uses: ./.github/actions/set-up-ansible/
+        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/set-up-ansible/
 
       - name: Set up Molecule
-        uses: ./.github/actions/set-up-molecule/
+        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/set-up-molecule/
 
       - name: Run Molecule tests
         run: molecule test
