--- a/.github/workflows/release_to_ansible_galaxy.yml
+++ b/.github/workflows/release_to_ansible_galaxy.yml
@@ -8,7 +8,7 @@ on:
 
 defaults:
   run:
-    working-directory: "${{ github.repository }}"
+    working-directory: "${{ GITHUB.REPOSITORY }}"
 
 jobs:
   release:
@@ -21,10 +21,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: ./.github/actions/set-up-python/
+        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/set-up-python/
 
       - name: Set up Ansible
-        uses: ./.github/actions/set-up-ansible/
+        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/set-up-ansible/
 
       - name: Publish role with import to Galaxy
         run: >-
