--- a/.github/workflows/release_to_ansible_galaxy.yml
+++ b/.github/workflows/release_to_ansible_galaxy.yml
@@ -21,10 +21,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/set-up-python/
+        uses: JakobLichterfeld/ansible-role-amok_exifsorter/.github/actions/set-up-python/
 
       - name: Set up Ansible
-        uses: ${{ GITHUB.REPOSITORY }}/.github/actions/set-up-ansible/
+        uses: JakobLichterfeld/ansible-role-amok_exifsorter/.github/actions/set-up-ansible/
 
       - name: Publish role with import to Galaxy
         run: >-
