--- a/.github/workflows/release_to_ansible_galaxy.yml
+++ b/.github/workflows/release_to_ansible_galaxy.yml
@@ -8,7 +8,7 @@ on:
 
 defaults:
   run:
-    working-directory: "${{ GITHUB.REPOSITORY }}"
+    working-directory: $GITHUB.REPOSITORY
 
 jobs:
   release:
