--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 
 defaults:
   run:
-    working-directory: "${{ GITHUB_REPOSITORY }}"
+    working-directory: $GITHUB_REPOSITORY
 
 jobs:
   lint:
