--- a/.github/workflows/release_to_ansible_galaxy.yml
+++ b/.github/workflows/release_to_ansible_galaxy.yml
@@ -20,7 +20,7 @@ jobs:
         uses: ./.github/actions/set-up-python/
 
       - name: Set up Ansible
-        uses: $GITHUB_REPOSITORY@molecule/set-up-ansible/
+        uses: JakobLichterfeld/ansible-role-amok_exifsorter@molecule/set-up-ansible/
 
       - name: Publish role with import to Galaxy
         run: >-
