--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -7,6 +7,7 @@ runs:
     - uses: actions/checkout@v3
 
     - name: Install lint dependencies
+      shell: bash
       run: pip3 install yamllint
 
     - name: Lint code
