--- a/.github/actions/set-up-molecule/action.yml
+++ b/.github/actions/set-up-molecule/action.yml
@@ -7,4 +7,5 @@ runs:
     - uses: actions/checkout@v3
 
     - name: Set up Molecule
+      shell: bash
       run: pip3 install molecule molecule-plugins[docker] docker
