--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,7 +4,9 @@
   gather_facts: true
   become: true
 
-  tasks:
+  vars:
+    ansible_user: "root"
+
     - name: Testing role
       ansible.builtin.include_role:
         name: jakoblichterfeld.amok_exifsorter
