ci: Molecule Converge test
- Solve undefined 'ansible_user' in Molecule

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,9 +4,7 @@
   gather_facts: true
   become: true
 
-  vars:
-    ansible_user: "root"
-
+  tasks:
     - name: Testing role
       ansible.builtin.include_role:
         name: jakoblichterfeld.amok_exifsorter
