--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -15,5 +15,8 @@ platforms:
     pre_build_image: true
 provisioner:
   name: ansible
+  host_vars:
+    all:
+        ansible_user: testuser
   playbooks:
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
