ci: Molecule Converge test
- Solve undefined 'ansible_user' in Molecule

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,6 +5,10 @@
   become: true
 
   tasks:
+    - name: Populate instance config dict
+      ansible.builtin.set_fact:
+        ansible_user: "ubuntu"
+
     - name: Testing role
       ansible.builtin.include_role:
         name: jakoblichterfeld.amok_exifsorter
