--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,6 +2,8 @@
 role_name_check: 1
 dependency:
   name: galaxy
+
+# Docker
 driver:
   name: docker
 platforms:
@@ -13,6 +15,8 @@ platforms:
     cgroupns_mode: host
     privileged: true
     pre_build_image: true
+
+# ansible.cfg
 provisioner:
   name: ansible
   playbooks:
