--- a/.github/workflows/publish_role_on_ansible_galaxy.yml
+++ b/.github/workflows/publish_role_on_ansible_galaxy.yml
@@ -1,6 +1,6 @@
 ---
 # see: https://github.com/geerlingguy/ansible-role-docker/blob/8bb277bd7fb7019eb129b4a07194f0364c060203/.github/workflows/release.yml
-name: Release Role to Ansible Galaxy
+name: Publish role on Ansible Galaxy
 on:
   push:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    name:  Release role to Ansible Galaxy
+    name:  Publish role on Ansible Galaxy
     runs-on: ubuntu-latest
     # prevent stuck jobs
     timeout-minutes: 20
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Ansible
         uses: ./.github/actions/set-up-ansible
 
-      - name: Publish role with import to Galaxy
+      - name: Import to Ansible Galaxy
         run: >-
           ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }}
           $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2)
