--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,15 +2,15 @@
 galaxy_info:
     role_name: amok_exifsorter
     namespace: jakoblichterfeld
-    version: 1.0.0
+    standalone: true
     author: JakobLichterfeld
     description: Install Amok Exifsorter via download
 
-    homepage: https://github.com/JakobLichterfeld/ansible-role-amok_exifsorter
+    #homepage: https://github.com/JakobLichterfeld/ansible-role-amok_exifsorter
     issue_tracker_url: https://github.com/JakobLichterfeld/ansible-role-amok_exifsorter/issues
 
     license: MIT
-    min_ansible_version: 2.1
+    min_ansible_version: "2.1"
 
     platforms:
         - name: Ubuntu
@@ -18,8 +18,9 @@ galaxy_info:
               - jammy
 
     galaxy_tags:
-        - amok-exifsorter
+        - amokexifsorter
         - exifsorter
+        - amok
         - exif
         - picture
 
