--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,7 @@
         state: directory
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
+        mode: '0644'
 
     - name: Download installer
       become: true
@@ -17,6 +18,9 @@
         dest: "{{ download_dir_on_remote_host }}/amok_exifsorter/exifsorter-{{ amok_exifsorter.version }}.tar.bz2"
         checksum: "{{ amok_exifsorter.checksum }}"
         timeout: 60
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
+        mode: '0644'
       register: amok_exifsorter_installer
 
     - name: Clean destination folder if needed
