fix: Correct Access Rights for Dir

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,8 @@
 - name: Install Block
   block:
     - name: Create Amok-Exifsorter download dir on remote host if it does not exist
+      become: true
+      become_user: "{{ ansible_user }}"
       ansible.builtin.file:
         path: "{{ download_dir_on_remote_host }}/amok_exifsorter"
         state: directory
@@ -24,12 +26,14 @@
       register: amok_exifsorter_installer
 
     - name: Clean destination folder if needed
+      become: true
       ansible.builtin.file:
         path: "/opt/amok_exifsorter"
         state: absent
       when: amok_exifsorter_installer.changed
 
     - name: Create destination folder if needed
+      become: true
       ansible.builtin.file:
         path: "/opt/amok_exifsorter"
         state: directory
@@ -39,6 +43,7 @@
       when: amok_exifsorter_installer.changed
 
     - name: Install in dir
+      become: true
       ansible.builtin.unarchive:
         src: "{{ download_dir_on_remote_host }}/amok_exifsorter/exifsorter-{{ amok_exifsorter.version }}.tar.bz2"
         dest: "/opt/amok_exifsorter"
@@ -46,6 +51,7 @@
       when: amok_exifsorter_installer.changed
 
     - name: Menu-Entry for all users
+      become: true
       ansible.builtin.template:
         src: "amok_exifsorter.desktop.j2"
         dest: "/usr/share/applications/amok_exifsorter.desktop"
