--- a/.github/actions/set-up-python/action.yml
+++ b/.github/actions/set-up-python/action.yml
@@ -9,4 +9,4 @@ runs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.13'
